Changelog
=========

1.0 (unreleased)
------------------

- Bootstrap: reduce empty page space on edit by combining content view
  tabs and actions menus.
  [davidjb]
- Bootstrap: ensure portal-columns are ordered to reflect left-to-right
  layout from Plone.
  [davidjb]
- Bootstrap: allow collective.js.jqueryui CSS from Plone to be included
  in themed pages.
  [davidjb]
- Bootstrap: allow ++resource++ CSS from Plone to be included in themed
  pages.  This allows for most non-default CSS (such as add-ons) to be 
  included in pages.
  [davidjb]
- Bootstrap: prevent search dropdown menu from closing on click.
  [davidjb]
- Bootstrap: fix replacement rule for responsive CSS.
  [davidjb]
- Bootstrap: improve flexibility of footer to handle multiple list items
  and include on output page. Backwards compatibility maintained
  with original styling.
  [davidjb]
- Bootstrap: reduce size of search input to allow for increased header
  space.
  [davidjb]
- Bootstrap: add original classes for input (text) fields into transformed
  content. This fixes issues with forms (eg ``folder_constraintypes_form``)
  that rely on this for JavaScript.
  [davidjb]
- Bootstrap: add classes for categories (tags) for content.
  [davidjb]
- Bootstrap: apply pagination classes for listing bars (such as for folders or
  search results). 
  [davidjb]
- Bootstrap: Modify all CSS and JS resources to use Plone's ``base`` variable,
  supplied by plone.app.theming. Without this, relative URLs result in the
  same resources being loaded on different URLs for every page request.
  [davidjb]
- Bootstrap: apply columnar classes for user dashboards. 
  [davidjb]
- Bootstrap: remove extraneous username from the personal tools menu. 
  [davidjb]
- Bootstrap: expand selectors for different button types.
  [davidjb]
- Bootstrap: improve button markup to ensure button classes are transposed
  (fixing add/edit content, and add user form issues).
  [davidjb]